# ws2122_robotik

./: map.pgm  map.yaml
cka/: package.xml  setup.cfg  setup.py
cka/cka/: simple_map.pgm  simple_map.yaml  zigzag.py
cka/launch/: tb3_real.launch.py  tb3_sim.launch.py  tb3_sim_rviz.launch.py
cka/resource/: README.md  Steps.txt  map - Copy (2).pgm  map.yaml
cka/zigzag/: zigzag.py
cka_biped/: package.xml  setup.cfg  setup.py
cka_gazebo/: CMakeLists.txt  package.xml
cka_gazebo/models/simple_room_model/: model.config  model.sdf
cka_gazebo/worlds/simple_room/: burger.model  simple_room
cka_gazebo/worlds/simple_room_2/: simple_room_2  simple_room_2.model
cka_gazebo_maze/: CMakeLists.txt  package.xml
cka_learner/tb3_sim/: package.xml
cka_learner/tb3_sim/launch/: tb3_sim_gazebo.launch.py
cka_maze/: package.xml  setup.py
cka_maze/cka_maze/: maze copy.py  maze.py
cka_maze/config/: config.yaml
cka_maze/launch/: cka_maze_real.py  cka_maze_sim_rviz.launch.py
tb3/: setup.py
tb3/launch/: tb3_real.launch.py  tb3_sim_rviz.launch.py
turtlebot3_project/: atan.py
