<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cka</name>
  <version>0.0.1</version>
  <description>Turtlebot 3 - WS2122</description>
  <maintainer email="ch.adolph@ostfalia.de">Christian Adolph</maintainer>
  <license>No license</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>turtlebot3_simulations</exec_depend> 
  <exec_depend>cka_gazebo</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
