<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cka_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <maintainer email="ch.adolph@ostfalia.de">Christian Adolph</maintainer>
  <license>STFU</license>
  <url type="repository">https://github.com/rocko/ws2122_robotik</url>
  <author email="author1@ostfalia.de">Author 1</author>
  <author email="author2@ostfalia.de">Author 1</author>
  <author email="author2@ostfalia.de">Author 1</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
